// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "username",
]
`;

exports[` 2`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "username",
]
`;

exports[` 3`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "username",
]
`;

exports[`## Order APIs # GET /api/orders should get my orders (as seller and buyer) 1`] = `
Array [
  "_id",
  "accountStatus",
  "shippingAddress",
  "username",
]
`;

exports[`## Order APIs # GET /api/orders should get my orders (as seller and buyer) 2`] = `
Array [
  "_id",
  "accountStatus",
  "profilePic",
  "shippingAddress",
  "username",
]
`;

exports[`## Order APIs # PUT /api/orders (more) should allow the buyer to cancel an order 1`] = `
Array [
  "buyer",
  "createdAt",
  "currency",
  "dateCancelled",
  "datePending",
  "id",
  "onovaFee",
  "priceOfItem",
  "product",
  "seller",
  "status",
  "total",
  "transactionFee",
  "updatedAt",
]
`;

exports[`## Order APIs # PUT /api/orders should allow the buyer to cancel the order without a reason 1`] = `
Array [
  "buyer",
  "createdAt",
  "currency",
  "dateCancelled",
  "datePending",
  "id",
  "onovaFee",
  "priceOfItem",
  "product",
  "seller",
  "status",
  "total",
  "transactionFee",
  "updatedAt",
]
`;

exports[`## Order APIs # PUT /api/orders should allow the seller to cancel the order 1`] = `
Array [
  "buyer",
  "createdAt",
  "currency",
  "dateCancelled",
  "datePending",
  "finalisedAt",
  "id",
  "onovaFee",
  "priceOfItem",
  "product",
  "reason",
  "seller",
  "status",
  "total",
  "transactionFee",
  "updatedAt",
]
`;

exports[`## Order APIs # PUT /api/orders should change the paymentMethod to \`paypal\` 1`] = `
Array [
  "buyer",
  "createdAt",
  "currency",
  "datePending",
  "id",
  "onovaFee",
  "paymentMethod",
  "priceOfItem",
  "product",
  "seller",
  "status",
  "total",
  "transactionFee",
  "updatedAt",
]
`;
